]created| training and practice store

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,8 +7,10 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <app-home />
+  <!-- <app-home /> -->
 
   <!-- <app-explore-container name="Tab 1 page"></app-explore-container> -->
+
+  <app-training-form />
 
 </ion-content>
