[created] login form, authservice and a tab menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
 <ion-app>
   <ion-router-outlet></ion-router-outlet>
+
+  <!-- 
+
+  cd ~/Developer/udemy/angular/firetrain-schedule
+  firebase emulators:export ./db-data/magic-recipe-data
+  firebase emulators:start --import ./db-data/magic-recipe-data
+
+  user: user@example.com
+  pw: 123456
+  -->
 </ion-app>
