--- a/src/app/pages/trainings/training-form/training-form.page.html
+++ b/src/app/pages/trainings/training-form/training-form.page.html
@@ -1,13 +1,22 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>training-form</ion-title>
+    <ion-title>Training</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">training-form</ion-title>
+      <ion-title size="large">Training</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <form>
+    <ion-item>
+      <ion-input [formField]="trainingForm.name" label="Training"
+        placeholder="Bitte geben den Namen des Trainings ein."></ion-input>
+    </ion-item>
+
+    <ion-button fill="outline" (click)="onSubmit()">Anlegen</ion-button>
+  </form>
 </ion-content>
