[update] name chance to exercises

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,16 +1,19 @@
-<ion-header [translucent]="true">
+<!-- <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>Home</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <!-- <ion-header collapse="condense">
+<ion-content [fullscreen]="true"> -->
+<!-- <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Home</ion-title>
     </ion-toolbar>
   </ion-header> -->
-  <ion-button (click)="add()">Add</ion-button>
 
-  <app-trainings-list />
-</ion-content>
+<app-trainings-list />
+
+<ion-button (click)="add()" fill="outline" style="color: #fff;">Add</ion-button>
+
+
+<!-- </ion-content> -->
